objects/Background_check__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It will be used to store the account  name</description>
        <formula>Volunteer__r.Region_Chapter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will be used to store the account phone</description>
        <formula>Volunteer__r.Region_Chapter__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Check_Email_signature__c</fullName>
        <description>This is Used in Background check email templates.</description>
        <formula>IF( Volunteer__r.Account.Name=&quot;&quot; &amp;&amp; Owner:User.Phone=&quot;&quot; &amp;&amp; Owner:User.Email=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName, 

IF( Volunteer__r.Account.Name=&quot;&quot; &amp;&amp; Owner:User.Phone=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Owner:User.Email, 
IF( Volunteer__r.Account.Name=&quot;&quot; &amp;&amp; Owner:User.Email=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Owner:User.Phone, 
IF(Owner:User.Phone=&quot;&quot; &amp;&amp; Owner:User.Email=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Volunteer__r.Account.Name , 

IF( Volunteer__r.Account.Name=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Owner:User.Phone + BR()+ Owner:User.Email, 
IF(Owner:User.Phone=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Volunteer__r.Account.Name  + BR() + Owner:User.Email , 
IF(Owner:User.Email=&quot;&quot;, Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR()+ Volunteer__r.Account.Name  +BR() + Owner:User.Phone, 

Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName + BR() + Volunteer__r.Account.Name + BR()+ Owner:User.Phone+ BR()+ Owner:User.Email 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Check Email signature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_FirstName__c</fullName>
        <formula>Volunteer__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will lookup to the volunteer contact</description>
        <label>Volunteer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The value should be volunteer contact</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact, Board Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Background Checks</relationshipLabel>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resided_in_US_for_past_7_years__c</fullName>
        <description>It will capture whether the Volunteer Resided US Past 7 Years or not.</description>
        <label>Reside USA Past 7 Yrs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>It will be used to store the account email</description>
        <formula>Volunteer__r.Region_Chapter__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate that record is active record or not. And also active only apply for most recently created record.</description>
        <inlineHelpText>This box will be checked when this background check is the most recent on file.</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>It will capture the background check process completed date.</description>
        <inlineHelpText>Date that an approved background check was run.</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>It will capture the requested date for background check</description>
        <inlineHelpText>Date background check was requested.</inlineHelpText>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>It holds the Expiration Date of Background check for volunteer.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It will hold the value of external Id for updating records from external system.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HiddenBackgroundExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when the background record get expire.</description>
        <label>Hidden Background Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Background_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Background Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Display_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden Display Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Trigger_BGC_Exp_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to fire the background check expiration notification email to volunteers</description>
        <label>Hidden Trigger BGC Exp Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Volunteer_Contact_Email__c</fullName>
        <description>This field is used as hidden field to store volunteer contact email in Background Check.</description>
        <label>Hidden Volunteer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>It will hold the import id.</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Provides a place for staff to collect notes about a particular background check.  Especially those that are out of country.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <description>Received From First Advantage URL</description>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Adverse_Action__c</fullName>
        <description>It captures the what dates chapter staff mailed Post Adverse Action.</description>
        <inlineHelpText>Date when the post-adverse action letter was sent, if necessary.</inlineHelpText>
        <label>Post-Adverse Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Adverse_Action__c</fullName>
        <description>It captures the what dates chapter staff mailed pre Adverse Action.</description>
        <inlineHelpText>Date when the pre-adverse action letter was sent, if necessary.</inlineHelpText>
        <label>Pre-Adverse Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RE_Date_Completed__c</fullName>
        <description>DATE_COMPLETED</description>
        <label>RE Date Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Date_Requested__c</fullName>
        <description>DATE_REQUESTED</description>
        <label>RE Date Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>ID, IMPORT_ID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This filed lookup to the user record</description>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It will tells the final result about the background check.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Sent to First Advantage</fullName>
                </value>
                <value>
                    <fullName>Received from First Advantage</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved w/ Conditions</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Record_Count__c</fullName>
        <description>Enables better record counting functions on reports.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Background_Report__c</fullName>
        <formula>IF( OR(ISBLANK(Order_Id__c), ISBLANK(Package_Id__c)),&apos;&apos;, HYPERLINK(&apos;/apex/ViewDocument_VF?id=&apos;&amp;Id, &apos;View Background Report&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Background Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VolunteerRoleOutofCompliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the volunteer has at least one volunteer role with the status of Out of Compliance.</description>
        <label>Volunteer Role(Out of Compliance)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VolunteerRoleTrainedTpendChapReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the volunteer has at least one volunteer role status as Trained, Traning Pending, Chapter Review</description>
        <label>Volunteer Role(Trained,Tpend,ChapReview)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It activates when the volunteer becomes inactive or all affiliations records are  inactive status.</description>
        <label>Hidden Volunteer is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>applicant_Id__c</fullName>
        <description>Received From First Advantage</description>
        <label>Applicant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This objects will contains the background check process details for the volunteers who submit the application to become a volunteer.</description>
    <label>Background Check</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Background check ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Checks</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Resided_in_US_for_past_7_years__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingReasons>
        <fullName>Chapter_Staff__c</fullName>
        <label>Chapter_Staff</label>
    </sharingReasons>
    <validationRules>
        <fullName>BC_Date_Of_Completed_validation</fullName>
        <active>true</active>
        <description>Date of Completed should be mandatory while entering Status .</description>
        <errorConditionFormula>(Text(Status__c) != null || NOT(ISBLANK( Date__c ))) &amp;&amp; (ISBLANK(Date_Completed__c))&amp;&amp; $Profile.Name  != &apos;Integration&apos; &amp;&amp;  NOT( ISPICKVAL( Status__c ,&apos;Sent to First Advantage&apos;)) &amp;&amp; NOT( ISPICKVAL( Status__c ,&apos;Received from First Advantage&apos;))</errorConditionFormula>
        <errorMessage>Please enter the value for Date Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BC_Status_validation</fullName>
        <active>true</active>
        <description>Status should be mandatory while entering Date of Completed.</description>
        <errorConditionFormula>Text(Status__c) = null &amp;&amp;  Not(ISBLANK(Date_Completed__c)) &amp;&amp; $Profile.Name != &apos;Integration&apos;</errorConditionFormula>
        <errorMessage>Please enter the value for status</errorMessage>
    </validationRules>
</CustomObject>